# ContactSphere

./: .gitignore  LICENSE  README.md  README_SERVICE.md  contactsphere copy.service  package-lock.json  package.json  start.sh
backend/: .env.example  auth.py  backup_service.py  contacts_service.py  geocoding_service.py  graph_database.py  linkedin_service.py  main.py  models.py  pyproject.toml  relationship_inference.py  requirements.txt  test_linkedin.py
backend/tests/: test_database.py  test_relationship_inference.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: DetailPanel.tsx  GraphView.tsx  GraphViewNew.tsx  ListView.tsx  MapView.tsx
frontend/src/components/ui/: alert-dialog.tsx  dialog.tsx  sheet.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: api.ts
